--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "dependencies": {
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
+    "@nestjs/typeorm": "^5.2.2",
+    "pg": "^7.7.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
+    "typeorm": "^0.2.9",
     "typescript": "^3.0.1"
   },
   "devDependencies": {
